# COINjecture1337

./: .gitignore  =2.0.0  =2.25.0  =3.0.0  CHANGELOG.md  DOWNLOAD_PACKAGES.md  FAUCET_API.README.md  README.md  RELEASE_v3.16.0_SUMMARY.md  default_miner_config.json  deploy_bootstrap_to_droplet.sh  deploy_mining_node.sh  fix_mobile_consensus_sync.py  install_coinjecture.py  logo_options.py  requirements.txt  retrieved_proof.json  setup.py  setup_dist.py  start_bootstrap_node.py  test_miner_config.json  test_wallet.json
.github/: RELEASE_NOTES_v4.0.md
.github/DISCUSSIONS/: v4_vision.md
.github/workflows/: ci.yml  determinism.yml  parity.yml  security.yml
aggregated_data/api/: computational_data_api.json
aggregated_data/csv/: computational_data.csv
aggregated_data/json/: computational_data.json
config/: miner_config.json
data_marketplace_package/: README.md  marketplace_summary.json
data_marketplace_package/api_endpoints/: api_endpoints.json  sample_api.py
data_marketplace_package/datasets/: gas_calculation.csv  mining_efficiency.csv
data_marketplace_package/documentation/: usage_guide.md  (+1 more)
docs/: API_REFERENCE.md  CODEOWNERS  P2P_NETWORKING.md  RUNBOOKS.md  USER_GUIDE.md
go/: go.mod  go.sum
migrations/: 002_consensus_blocks.sql
python/: pyproject.toml
python/src/coinjecture/: __init__.py  legacy_compat.py  types.py
python/src/coinjecture/consensus/: __init__.py  admission.py  codec.py
rust/network-b/core/: Cargo.toml
rust/network-b/core/src/: block.rs  commitment.rs  crypto.rs  lib.rs  problem.rs  transaction.rs  types.rs
scripts/: apply_conjecture_fix.py  build_all_packages.sh  comprehensive_data_aggregator.py  create_data_marketplace_package.py  critical_sync.py  deploy_p2p_consensus.py  fix_api_cache_sync.py  fix_p2p_consensus.py  force_blockchain_state_write.py  force_frontend_cache_clear.py  ipfs_data_extractor.py  migrate_database.py  rpc_force_sync.py  sync_consensus_to_api.py
src/: __init__.py  cli.py  consensus.py  consensus_service.py  node.py  storage.py
web/: SEO_OPTIMIZATION_README.md  app.js  clear-cache.html  deploy-s3.sh  index.html  metrics.html  mining.html  robots.txt  sitemap.xml
(+229 files in other folders)
