[package]
name = "coinject-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
bs58.workspace = true
chrono.workspace = true
thiserror.workspace = true
bincode.workspace = true
